# binary-packer

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
src/: configuration.rs  main.rs
