[package]
name = "vshell-plugin-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version="4.5.38", features=["derive"] }
include-bytes-zstd = "0.1.0"
rand = "0.9.1"
walkdir = "2.5.0"
zip = { version = "3.0.0", features = ["deflate", "aes-crypto"] }

[profile.release]
opt-level = "z" 
strip = "symbols"

[features]
default = []
only_unpacking = []
